# C-Compiler

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: main.c
src/helper/: helper.c  helper.h
src/lexer/: lexer.c  lexer.h
src/parser/: ast.c  ast.h
src/utils/: arena.c  arena.h
testing/: math.c
tests/: CMakeLists.txt  comments.c  edge_cases.c  malformed.c  math.c  string_literals.c  test_lexer.c
